@@ -1,3 +1,10 @@
+2007-10-03 Paul Lindner <lindner@inuus.com>
+	* Incorporate "cas" operation developed by Dustin
+	  Sallings <dustin@spy.net> and implemented by
+	  Chris Goffinet <goffinet@yahoo-inc.com>.  This
+	  change allows you to do atomic changes to an
+	  existing key.
+
 2007-08-21 Paul Lindner <lindner@inuus.com>
 	* Incorporate incrememnt patch from Evan Miller 
 	  <emiller@imvu.com> to define increment overflow
